cabal-version:      2.4
name:               Sept2022-A
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Evan Rinehart
maintainer:         evanrinehart@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable Sept2022-A
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: PackedString, Heap, Syntax, Parser, Compile, Link, Eval

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0, megaparsec, containers, mtl,
                      directory, filepath
    hs-source-dirs:   app, lib
    default-language: Haskell2010
