cabal-version:      2.4
name:               borax
version:            0.1.0.0

author:             Evan Rinehart
maintainer:         evanrinehart@gmail.com

extra-source-files: CHANGELOG.md

executable borax
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
      PackedString, Heap, Syntax, Parser, Interpret, Prepare, Link,
      System, Asm, Expr, Compiler

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0, megaparsec, containers, mtl,
                      directory, filepath, pretty-simple, time, data-fix
    hs-source-dirs:   app, lib
    default-language: Haskell2010
